fix: исправления по ревью (убраны лишние вызовы, getFirst, Optional.ofNullable, unique и not null в schema)